# total_map

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/actions/install-cmake/: action.yml
.github/workflows/: ci.yml
cmake/: NegativeTests.cmake  TestMatrix.cmake  run_consumer_tests.cmake  run_death_test.cmake  run_negative_test.cmake  total_mapConfig.cmake.in
docs/: DESIGN-keyed-refinements.md  reflection-prototype-notes.md  releasing.md
docs/superpowers/plans/: 2026-07-18-bijection-snapshot-join.md
include/emap/: bijection.h  keyed_map.h  mutable_total_map.h  snapshot_map.h  total_map.h
tests/: assert_death.cpp  assert_death_mutable.cpp  selftest.cpp  selftest_bijection.cpp  selftest_keyed.cpp  selftest_mutable.cpp  selftest_snapshot.cpp
tests/consumer/: consumer.cpp
tests/consumer/bare/: CMakeLists.txt
tests/consumer/find_package/: CMakeLists.txt
tests/consumer/subdir/: CMakeLists.txt
tests/negative/: bijection_count_mismatch.cpp  bijection_missing_enumerator.cpp  bijection_repeated_value.cpp  duplicate_key.cpp  duplicate_value.cpp  key_out_of_range.cpp  keyed_missing_enumerator.cpp  missing_enumerator.cpp  mutable_duplicate_key.cpp  mutable_missing_enumerator.cpp  no_enum_count.cpp  not_an_enum.cpp  projection_collision.cpp  snapshot_upstream_collision.cpp  too_many_rows.cpp  zero_enumerators.cpp
